--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+server.port=8080
+spring.datasource.url=jdbc:postgresql://jelani.db.elephantsql.com:5432/uaaowocl
+spring.datasource.username=uaaowocl
+spring.datasource.password=c6dvM-dLU_N9X_TuR-zpiEnsSO_J0IpG
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+
+
+
